Fixed iPhone 6 7 8 Alignment for Scores

--- a/bandwagon/static/bandwagon/main.css
+++ b/bandwagon/static/bandwagon/main.css
@@ -410,7 +410,7 @@ body {
 }
 @media (max-width: 398px) {
   .home-logo {
-    margin-bottom: 35px;
+    margin-bottom: 34px;
     margin-left: 25.5%;
   }
 }
